# ChangeLog for NetApp Cacti scripts
# Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
# $Header: $

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding a comment to remind me to make the script run everything when
  called without a function name.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Cleaning up some comments so they're correct.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding the OIDs for the FCP checking and filling in the keys and status
  arrays. All that we need to do now is check if we're licensed and check
  the actual responses.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Change ss_netapp_licenses to ss_netapp_license and allow us to specifiy a
  license to check. This allows us to more easily use the function in
  queries for a specific type of stats.

  08 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Removing _ops from function stubs, since I am planning on making them
  queries, based on the availability of the licenses on the filer.

  08 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Add description to the oids array for LUN stats and adding stub functions
  for CIFS/FCP/HTTP/iSCSI/NFS operations stats.

  08 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Fixing spacing.

  31 Aug 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  scripts/ss_netapp.php:
  Finish up the ss_netapp_licenses function and do some minor edits.

  29 Aug 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  scripts/ss_netapp.php:
  Adding the initial part of my license-checking function, to be used later
  to determine what graphs are available.

  29 Aug 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>